--- a/about_project.html
+++ b/about_project.html
@@ -27,11 +27,6 @@
         <div class="content">
             <div class="left-part">
                 <p class="first-p">Как вы все прекрасно знаете, меня зовут Виктор Коновалов и я студент IT вуза.</p>
-                <p>В связи с этим замечательным фактом я решил создать этот сайт в качестве первого своего проекта. Данный 
-                    сайт предстваляет из себя мой личный блог о жизни в университете Innopolis. Если вам не сложно, активничайте на 
-                    сайте: пишите комментарии, учавствуйте в обсуждениях, пишите о всевозможных проблемах в поддержку (елси я ее
-                     реализую) или просто мне лично. 
-                </p>
             </div>
             <div class="middle-part">
                 👉
@@ -40,6 +35,28 @@
                 <img class="my-image" src="images/Слой 0.png" alt="0">
             </div>
         </div>  
+        <p style="font-size: 1.7rem; margin: 0;">В связи с этим замечательным фактом я решил создать этот сайт в качестве первого своего проекта. Данный 
+            сайт предстваляет из себя мой личный блог о жизни в университете Innopolis. Если вам не сложно, активничайте на 
+            сайте: пишите комментарии, учавствуйте в обсуждениях, пишите о всевозможных проблемах в поддержку (елси я ее
+             реализую) или просто мне лично. 
+        </p>
+        <div class="social-media-bottom">
+            <div class="soc-med-tg">
+                <p>
+                    djsaflkjdaslkfjsaldjkflas
+                </p>
+            </div>
+            <div class="soc-med-git">
+                <p>
+                    2
+                </p>
+            </div>
+            <div class="soc-med-mail">
+                <p>
+                3
+                </p>
+            </div>
+        </div>
     </main>
 </body>
 </html>
