full bottom menu is ready

--- a/about_project.html
+++ b/about_project.html
@@ -42,19 +42,23 @@
         </p>
         <div class="social-media-bottom">
             <div class="soc-med-tg">
-                <p>
-                    djsaflkjdaslkfjsaldjkflas
-                </p>
+                <center>
+                <a style="max-width: fit-content;" href="https://t.me/vitec_321">
+                    <div class="tg" style="max-width: fit-content;">vitec_321</div>
+                </a>
+                </center>
             </div>
             <div class="soc-med-git">
-                <p>
-                    2
-                </p>
+                <center>
+                    <a style="max-width: fit-content;" href="https://github.com/fenton512">
+                        <div class="git" style="max-width: fit-content;">github</div>
+                    </a>
+                </center>
             </div>
             <div class="soc-med-mail">
-                <p>
-                3
-                </p>
+                <center>        
+                    <div class="mail" style="max-width: fit-content; font-size: 2rem;">viktor.konovalov.2006@mail.ru</div>
+               </center>
             </div>
         </div>
     </main>
