some fix with main text

--- a/about_project.html
+++ b/about_project.html
@@ -33,9 +33,10 @@
             </div>
             <div class="right-part">
                 <img class="my-image" src="images/Слой 0.png" alt="0">
+                <p style="text-align: center;">Да, это я кстати</p>
             </div>
         </div>  
-        <p style="font-size: 1.7rem; margin: 0;">В связи с этим замечательным фактом я решил создать этот сайт в качестве первого своего проекта. Данный 
+        <p class="main-text"> В связи с этим замечательным фактом я решил создать этот сайт в качестве первого своего проекта. Данный 
             сайт предстваляет из себя мой личный блог о жизни в университете Innopolis. Если вам не сложно, активничайте на 
             сайте: пишите комментарии, учавствуйте в обсуждениях, пишите о всевозможных проблемах в поддержку (елси я ее
              реализую) или просто мне лично. 
