--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
             <div class = "flex-element-logo">
             </div>
             <div class = "flex-element-blog">
-                <a href="#blog">Блог</a>
+                <button>Блог</button>
             </div>
             <div class = "flex-element-discusion">
-                <a href="#discusion">Обсуждения</a>
+                <button>Обсуждения</button>
             </div>
             <div class = "flex-element-contacts">
-                <a href="#contacts">Контакты</a>
+                <button>Контакты</button>
             </div>
             <div class = "flex-element-aboutProject">
-                <a href="about_project.html">О проекте</a>
+                <button>О проекте</button>
             </div>
         </nav>
         <section class="human">
