--- a/about_project.html
+++ b/about_project.html
@@ -30,12 +30,14 @@
                 <p class="main-text"> В связи с этим замечательным фактом я решил создать этот сайт в качестве своего первого проекта. Данный 
                     дейтище предстваляет из себя мой личный блог о жизни в университете Innopolis. На нем я планирую выкладывать различные посты, фотки, видосы и все в таком духе, а любой блог,
                     как вы все прекрасно знаете не может существовать без читателей. Поэтому, если вам не сложно, активничайте на 
-                    сайте: пишите комментарии, учавствуйте в обсуждениях, предлагайте различные улучшения, пишите о всевозможных проблемах в поддержку (елси я ее конечно 
+                    сайте: пишите комментарии, учавствуйте в обсуждениях, предлагайте различные улучшения, пишите о всевозможных проблемах в поддержку (еслии я ее конечно 
                     реализую). В любом случае, ниже прикремлены ресурсы с помощью которых со мной можно связаться. 
                 </p>
             </div>
             <div class="middle-part">
-                👉
+                <center>
+                    👉
+                </center>
             </div>
             <div class="right-part">
                 <img class="my-image" src="images/Слой 0.png" alt="0">
