--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animation</title> 
+    <link rel="shortcut icon" href="./images/logo_img.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/animation_test.css"> 
 </head>
 <body>
     <main class="main-box">
         <nav class = "menu">
             <div class = "flex-element-logo">
+                <img  class = "logo-img" src="./images/logo_img.png" alt="">
+                <p class="logo-text"> Vector <br>Blog</p>
             </div>
             <div class = "flex-element-blog">
                 <button>Блог</button>
