create logo-link and add color for button

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <main class="main-box">
         <nav class = "menu">
-            <div class = "flex-element-logo">
+            <a class = "flex-element-logo" href="index.html">
                 <img  class = "logo-img" src="./images/logo_img.png" alt="">
                 <p class="logo-text"> Vector <br>Blog</p>
-            </div>
+            </a>
             <div class = "flex-element-blog">
                 <button>Блог</button>
             </div>
