add modifications for aboutProject button

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animation</title> 
+    <title>Vector's blog</title> 
     <link rel="shortcut icon" href="./images/logo_img.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/animation_test.css"> 
+    <script src="js_code/Linker.js" defer></script>
+    <script src="./js_code/initializer.js" defer></script>
+    <script src="js_code/Main.js" defer></script>
 </head>
 <body>
     <main class="main-box">
@@ -15,16 +18,16 @@
                 <p class="logo-text"> Vector <br>Blog</p>
             </a>
             <div class = "flex-element-blog">
-                <button>Блог</button>
+                <button id = "blog-button">Блог</button>
             </div>
             <div class = "flex-element-discusion">
-                <button>Обсуждения</button>
+                <button id = "discusion-button">Обсуждения</button>
             </div>
             <div class = "flex-element-contacts">
-                <button>Контакты</button>
+                <button id = "contacts-button">Контакты</button>
             </div>
             <div class = "flex-element-aboutProject">
-                <button>О проекте</button>
+                <button id = "about-project-button">О проекте</button>
             </div>
         </nav>
         <section class="human">
@@ -61,4 +64,5 @@
 
     </main>
 </body>
+<script src=""></script>
 </html>
