--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="./images/logo_img.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/animation_test.css"> 
     <script src="js_code/Linker.js" defer></script>
-    <script src="./js_code/initializer.js" defer></script>
+    <script src="./js_code/Initializer.js" defer></script>
     <script src="js_code/Main.js" defer></script>
 </head>
 <body>
@@ -23,8 +23,8 @@
             <div class = "flex-element-discusion">
                 <button id = "discusion-button">Обсуждения</button>
             </div>
-            <div class = "flex-element-contacts">
-                <button id = "contacts-button">Контакты</button>
+            <div class = "flex-element-accaunt">
+                <button id = "accaunt-button">Аккаунт</button>
             </div>
             <div class = "flex-element-aboutProject">
                 <button id = "about-project-button">О проекте</button>
