it is wotking some how

--- a/account.html
+++ b/account.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/account.css">
     <title>Account</title>
 </head>
 <body>
-    
+    <div class = "grid-container-with-choise">
+        <nav class = "menu">
+            <a class = "flex-element-logo" href="index.html">
+                <img  class = "logo-img" src="./images/logo_img.png" alt="">
+                <p class="logo-text"> Vector <br>Blog</p>
+            </a>
+            <div class = "flex-element-blog">
+                <button id = "blog-button">Блог</button>
+            </div>
+            <div class = "flex-element-discusion">
+                <button id = "discusion-button">Обсуждения</button>
+            </div>
+            <div class = "flex-element-accaunt">
+                <button id = "accaunt-button">Аккаунт</button>
+            </div>
+            <div class = "flex-element-aboutProject">
+                <button id = "about-project-button">О проекте</button>
+            </div>
+        </nav>
+        <section class = "grid-element-main-box">
+            <h1>Уже есть аккаунт на vector's site?</h1>
+        </section>
+        <section class="grid-element-empty" id="right"></section>
+        <section class="grid-element-empty" id="left"></section>
+        <section class="grid-element-empty" id ="bottom"></section>
+    </div>
 </body>
 </html>
