--- a/account.html
+++ b/account.html
@@ -7,7 +7,6 @@
     <title>Account</title>
 </head>
 <body>
-    <div class = "grid-container-with-choise">
         <nav class = "menu">
             <a class = "flex-element-logo" href="index.html">
                 <img  class = "logo-img" src="./images/logo_img.png" alt="">
@@ -26,12 +25,11 @@
                 <button id = "about-project-button">О проекте</button>
             </div>
         </nav>
-        <section class = "grid-element-main-box">
-            <h1>Уже есть аккаунт на vector's site?</h1>
+        <section class = "flex-box">
+            <div class="quastion-box">
+                <h1>Уже есть аккаунт на vector's site?</h1>
+            </div>
         </section>
-        <section class="grid-element-empty" id="right"></section>
-        <section class="grid-element-empty" id="left"></section>
-        <section class="grid-element-empty" id ="bottom"></section>
-    </div>
+
 </body>
 </html>
