create question on the account page

--- a/account.html
+++ b/account.html
@@ -27,7 +27,13 @@
         </nav>
         <section class = "flex-box">
             <div class="quastion-box">
-                <h1>Уже есть аккаунт на vector's site?</h1>
+                <center>
+                <h1 style="font-size: 3vw;">Уже есть аккаунт на vector's site?</h1>
+                </center>
+                <div class="button-choice-over-two">
+                    <button class="flex-button">ДА</button>
+                    <button class="flex-button">НЕТ</button>
+                </div>
             </div>
         </section>
 
