--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <button id = "discusion-button">Обсуждения</button>
             </div>
             <div class = "flex-element-accaunt">
-                <button id = "accaunt-button">Аккаунт</button>
+                <button id = "account-button">Аккаунт</button>
             </div>
             <div class = "flex-element-aboutProject">
                 <button id = "about-project-button">О проекте</button>
