add animation for NO_BUTTON and fix arhitecture

--- a/about_project.html
+++ b/about_project.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AboutProject</title>
+    <link rel="stylesheet" href="styles/general.css">
+    <link rel="stylesheet" href="styles/menu.css">
     <link rel="stylesheet" href="styles/about_project.css">
 </head>
 <body>
