--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Vector's blog</title> 
     <link rel="shortcut icon" href="./images/logo_img.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/animation_test.css"> 
+    <script src="js_code/ElementBehavior.js"></script>
     <script src="js_code/Linker.js" defer></script>
     <script src="./js_code/Initializer.js" defer></script>
     <script src="js_code/Main.js" defer></script>
