--- a/account.html
+++ b/account.html
@@ -43,8 +43,9 @@
                 </div>
                 <!-- <div id="box-for-form"> -->
                 <!-- <center> -->
-                <div style="width: 60vw; height: 70vh; display: flex; justify-content: center;">
-                    <form action="" class="hide"  id="registration-form" >
+                    
+                <div class="hide registration-box">
+                    <form action="" id="registration-form" >
                 
                         <label for="name">Имя пользователя: </label>
                         <input type="text" id="name">
