finish registration page

--- a/account.html
+++ b/account.html
@@ -35,7 +35,7 @@
         <section class = "flex-box">
             <div class="question-box">
                 <!-- <center> -->
-                    <h1 style="font-size: 3vw; text-align: center; width: 40vw;" id="question-paragraph">Уже есть аккаунт на vector's site?</h1>
+                    <h1 style="font-size: 2.7vw; text-align: center; width: 40vw;" id="question-paragraph">Уже есть аккаунт на vector's site?</h1>
                 <!-- </center> -->
                 <div class="button-choice-over-two" id="no-yes-buttons">
                     <button class="flex-button" id="choice-button-yes">ДА</button>
@@ -62,6 +62,7 @@
                         <label for="e-mail">Электронная почта:</label>
                         <input type="text" id="e-mail"> 
                     </form>
+                    <input type="submit">
                 </div>
                 <!-- </center> -->
                 <!-- </div> -->
