finish registration and loggin pages

--- a/account.html
+++ b/account.html
@@ -51,16 +51,22 @@
                         <input type="text" id="name">
                     <!-- </div> -->
                     <!-- <div> -->
-                        <label for="login">Придумайте логин для аккаунта: </label>
-                        <input type="text" id="login">
+                        <label for="login-reg">Придумайте логин для аккаунта: </label>
+                        <input type="text" id="login-reg">
                     <!-- </div> -->
                     <!-- <div> -->
-                        <label for="password">Придумайте пароль для аккаунта:</label>
-                        <input type="text" id="password">
+                        <label for="password-reg">Придумайте пароль для аккаунта:</label>
+                        <input type="text" id="password-reg">
                     <!-- </div> -->
                     <!-- <div> -->
-                        <label for="e-mail">Электронная почта:</label>
-                        <input type="text" id="e-mail"> 
+                        <label for="e-mail-reg">Электронная почта:</label>
+                        <input type="text" id="e-mail-reg"> 
+                    </form>
+                    <form action="" id="login-form" class="hide">
+                        <label for="login-log">Логин</label>
+                        <input type="text" id="login-log">
+                        <label for="password-log">Пароль</label>
+                        <input type="text" id="password-log">
                     </form>
                     <input type="submit">
                 </div>
